--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^4.2.3
   flex_color_scheme: ^7.1.2
+  simple_timer: ^2.0.0
+  flutter_timer_countdown: ^1.0.5
 
 dev_dependencies:
   flutter_test:
