--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flex_color_scheme: ^7.1.2
   simple_timer: ^2.0.0
   flutter_timer_countdown: ^1.0.5
+  adhan_dart: ^1.0.8
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
